--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ before_script:
 cache:
     directories:
         - node_modules
+script: node --harmony_proxies node_modules/.bin/jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
